# hypr-bucket

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix  hypr-bucket.desktop  shell.nix
.github/workflows/: aur-publish.yml  auto-tag.yml
resources/: default.css
src/: app.rs  config.rs  desktop.rs  keybinds.rs  launcher.rs  main.rs  search.rs  single_instance.rs  ui.rs
src/ui/: components.rs
